refactor(landing page): update title and heading

--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
-# Hi, I'm Jane Doe
+# Meet Clark Eidt!
 
-I'm creating noice web experiences for the next generation of consumer-facing companies
+Clark is the Village of Pigeon's unofficial-yet-real "Donut King"!
